--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.3.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
+    "sharp": "^0.30.7",
     "validator": "^13.7.0"
   }
 }
